--- a/worker-movement.html
+++ b/worker-movement.html
@@ -143,18 +143,8 @@ body {
 
 <div class="row">
   <div class="main">
-    <h2>TABLE OF CONTENTS</h2>
-	<ol>
-	<li><a href="./visitors-through-the-company.html">Visitors through the company</a></li>
-	<li><a href="./handling-the-keys.html">Handling the keys</a></li>
-	<li><a href="./internet-access.html">Internet access</a></li>
-	<li><a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a></li>
-	<li><a href="./sg-for-clothes-and-shoes.html">Security guide for clothes and shoes</a></li>
-	<li><a href="./work-insurance.html">Work insurance</a></li>
-	<li><a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a></li>
-	<li><a href="./worker-movement.html">Good car in use</a></li>
-	<li><a href="./contact.html">Worker physical movement</a></li>
-	</ol>
+    <h2>VISITORS THROUGH THE COMPANY</h2>
+	
     </div>
 </div>
 
