Updated the Design and finished the structure of all Pages.

--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,26 @@
   box-sizing: border-box;
 }
 
-/* Style the body */
+a:visited {
+  color: #fcba03;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
-/* Header/logo Title */
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
-  color: white;
+  background: #fcba03;
+  color: black;
 }
 
-/* Increase the font size of the heading */
 .header h1 {
   font-size: 40px;
 }
 
-/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -38,7 +38,6 @@ body {
   top: 0;
 }
 
-/* Style the navigation bar links */
 .navbar a {
   float: left;
   display: block;
@@ -48,15 +47,12 @@ body {
   text-decoration: none;
 }
 
-
-/* Right-aligned link */
 .navbar a.right {
   float: right;
 }
 
-/* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
+  background-color: #fcba03;
   color: black;
 }
 
@@ -66,7 +62,6 @@ body {
   color: white;
 }
 
-/* Column container */
 .row {  
   display: -ms-flexbox; /* IE10 */
   display: flex;
@@ -74,46 +69,25 @@ body {
   flex-wrap: wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
   background-color: white;
   padding: 20px;
-  margin: 20px;
 }
 
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
 .footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
 }
 
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row {   
     flex-direction: column;
   }
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
   .navbar a {
     float: none;
@@ -140,7 +114,7 @@ body {
   <a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a>
   <a href="./good-car-in-use.html">Good car in use</a>
   <a href="./worker-movement.html">Worker physical movement</a>
-  <a href="./contact.html" class="right">Contact</a>
+  <a href="./contact.html" class="right active" >Contact</a>
 </div>
 
 <div class="row">
