--- a/visitors-through-the-company.html
+++ b/visitors-through-the-company.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Security Guide</title>
+<title>Security Guide - Visitors through the company</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -124,12 +124,12 @@ body {
 
 <div class="header">
   <h1>Security Guide</h1>
-  <p>The <b>security guide</b> for a cleaning company.</p>
+  <p>Visitors through the company</p>
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
-  <a href="./visitors-through-the-company.html">Visitors through the company</a>
+  <a href="./index.html">Home</a>
+  <a href="./visitors-through-the-company.html" class="active">Visitors through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
   <a href="./internet-access.html">Internet access</a>
   <a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a>
@@ -143,7 +143,7 @@ body {
 
 <div class="row">
   <div class="main">
-    <h2>VISITORS THROUGH THE COMPANY</h2>
+    <h2>VISITORS THROUGH THE COMPANYS </h2>
 	
     </div>
 </div>
