--- a/worker-movement.html
+++ b/worker-movement.html
@@ -124,11 +124,11 @@ body {
 
 <div class="header">
   <h1>Security Guide</h1>
-  <p>The <b>security guide</b> for a cleaning company.</p>
+  <p>Worker physical movement</p>
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
   <a href="./internet-access.html">Internet access</a>
@@ -137,13 +137,13 @@ body {
   <a href="./work-insurance.html">Work insurance</a>
   <a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a>
   <a href="./good-car-in-use.html">Good car in use</a>
-  <a href="./worker-movement.html">Worker physical movement</a>
+  <a href="./worker-movement.html" class="active">Worker physical movement</a>
   <a href="./contact.html" class="right">Contact</a>
 </div>
 
 <div class="row">
   <div class="main">
-    <h2>VISITORS THROUGH THE COMPANY</h2>
+    <h2>WORKER PHYISCAL MOVEMENT</h2>
 	
     </div>
 </div>
