--- a/about-us.html
+++ b/about-us.html
@@ -9,26 +9,26 @@
   box-sizing: border-box;
 }
 
-/* Style the body */
+a:visited {
+  color: #fcba03;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 
-/* Header/logo Title */
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
-  color: white;
+  background: #fcba03;
+  color: black;
 }
 
-/* Increase the font size of the heading */
 .header h1 {
   font-size: 40px;
 }
 
-/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -37,7 +37,6 @@ body {
   top: 0;
 }
 
-/* Style the navigation bar links */
 .navbar a {
   float: left;
   display: block;
@@ -47,15 +46,12 @@ body {
   text-decoration: none;
 }
 
-
-/* Right-aligned link */
 .navbar a.right {
   float: right;
 }
 
-/* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
+  background-color: #fcba03;
   color: black;
 }
 
@@ -65,7 +61,6 @@ body {
   color: white;
 }
 
-/* Column container */
 .row {  
   display: -ms-flexbox; /* IE10 */
   display: flex;
@@ -73,16 +68,6 @@ body {
   flex-wrap: wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
@@ -90,28 +75,18 @@ body {
   padding: 20px;
 }
 
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
 .footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
 }
 
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row {   
     flex-direction: column;
   }
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
   .navbar a {
     float: none;
@@ -144,8 +119,9 @@ body {
 <div class="row">
   <div class="main">
     <h2>ABOUT US</h2>
-	
-    </div>
+	This project was executed in the module Secure Website Project. The goal was a complete security guide for a cleaning company based in Helsinki. 
+	<br><br>The project was implemented by <strong>Remet Santos</strong>, <strong>Mohammed Aitoukazzamane</strong>, <strong>Kien Nguyen</strong> and <strong>Elias Anderlohr</strong>. 
+    <br><br></div>
 </div>
 
 <div class="footer">
