--- a/index.html
+++ b/index.html
@@ -105,14 +105,17 @@ body {
 <div class="navbar">
   <a href="./index.html" class="active">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
+  <a href="./cameras-through-the-company.html">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
   <a href="./internet-access.html">Internet access</a>
   <a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a>
   <a href="./sg-for-clothes-and-shoes.html">Security guide for clothes and shoes</a>
   <a href="./work-insurance.html">Work insurance</a>
   <a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a>
+  <a href="./paper-shredder.html">Paper shredder</a>
   <a href="./good-car-in-use.html">Good car in use</a>
   <a href="./worker-movement.html">Worker physical movement</a>
+  <a href="./fixing-cars.html">Fixing companies cars</a>
   <a href="./contact.html" class="right">Contact</a>
 </div>
 
@@ -121,14 +124,17 @@ body {
     <h2>TABLE OF CONTENTS</h2>
 	<ol>
 	<li><a href="./visitors-through-the-company.html">Visitors through the company</a></li>
+	<li><a href="./cameras-through-the-company.html">Cameras through the company</a></li>
 	<li><a href="./handling-the-keys.html">Handling the keys</a></li>
 	<li><a href="./internet-access.html">Internet access</a></li>
 	<li><a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a></li>
 	<li><a href="./sg-for-clothes-and-shoes.html">Security guide for clothes and shoes</a></li>
 	<li><a href="./work-insurance.html">Work insurance</a></li>
 	<li><a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a></li>
+	<li><a href="./paper-shredder.html">Paper shredder</a></li>
 	<li><a href="./good-car-in-use.html">Good car in use</a></li>
 	<li><a href="./worker-movement.html">Worker physical movement</a></li>
+	<li><a href="./fixing-cars.html">Fixing companies cars</a></li>
 	</ol>
     </div>
 </div>
