--- a/paper-shredder.html
+++ b/paper-shredder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About Us</title>
+<title>Security Guide - Paper shredder</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -98,8 +98,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>About us</h1>
-  <p>About this project and the company.</p>
+  <h1>Security Guide</h1>
+  <p>Paper shredder</p>
 </div>
 
 <div class="navbar">
@@ -121,10 +121,9 @@ body {
 
 <div class="row">
   <div class="main">
-    <h2>ABOUT US</h2>
-	This project was executed in the module Secure Website Project. The goal was a complete security guide for a cleaning company based in Helsinki. 
-	<br><br>The project was implemented by <strong>Remet Santos</strong>, <strong>Mohammed Aitoukazzamane</strong>, <strong>Kien Nguyen</strong> and <strong>Elias Anderlohr</strong>. 
-    <br><br></div>
+    <h2>PAPER SHREDDER</h2>
+	
+    </div>
 </div>
 
 <div class="footer">
