Implemented the Guide for good-car-in-use and handling-the-cleaning-tools

--- a/good-car-in-use.html
+++ b/good-car-in-use.html
@@ -121,8 +121,9 @@ body {
 <div class="row">
   <div class="main">
     <h2>GOOD CAR IN USE</h2>
-	
-    </div>
+	The company has the responsibility of getting good cars, every car has to be in good condition for the work usage. Every car has to get the winter and summer tires, good lighters… from the safety prospective, it has to be inspected every month and check that everything is fine in addition to the obligatory annual inspection. The worker drivers have also the responsibility of telling the company once they notice that something is going wrong.
+    <br><br>
+	</div>
 </div>
 
 <div class="footer">
