--- a/handling-the-cleaning-tools.html
+++ b/handling-the-cleaning-tools.html
@@ -122,8 +122,20 @@ body {
 <div class="row">
   <div class="main">
     <h2>HANDLING THE CLEANING TOOLS</h2>
-	
-    </div>
+	The aim of security guideline for the cleaning tools is that, the cleaning tools has to be with a high-quality and safe for the workers. 
+
+	<ul>
+	<li>Rubber gloves: rubber gloves are important for the workers to protect their hands from any sickness or allergy.</li>
+
+<li>Broom: The broom has to be tall and strong that the workers can work easily and efficiently without hurting their back. So, from the safety prospective, the workers have to use the broom and stand straightly in order to keep the back in the right position while working.</li>
+
+<li>Spray cleaner: The spray has to be big and resistible that the worker can use it easily, workers have to use it while wearing the gloves to protect their hands and keep it far from their eyes, since it has the cleaning products which might got the alcohol and be dangerous for their eyes.</li>
+
+<li>Squeegee: It is one of the cleaning tools the company is using to clean glass. Workers while working with the squeegee, If the glass is in a real high place, workers have to use a strong ladder which is supported with straight. It is extremely important to put the ladders in a flat ground that it can hold the worker safely.</li>
+
+<li>Mop and bucket/ sponge mop: Those are probably the most used tools for the cleaning, in order to keep the employees back safe, it is important that the tool is tall, strong and light. The worker also has to use the tool standing straightly.</li>
+</ul>
+    <br><br></div>
 </div>
 
 <div class="footer">
