--- a/handling-the-keys.html
+++ b/handling-the-keys.html
@@ -122,7 +122,11 @@ body {
 <div class="row">
   <div class="main">
     <h2>HANDLING THE KEYS</h2>
-	test
+    <ul>
+    <li>Office keys: Since the company has 4 full-time and 8 part-time employees. The part-time employees are all the time accompanied by the full-time workers. For this reason, it is enough for the company and for the workers that only full-time employees get the keys. On the other hand, the company gives all employees the ID card, which they have to scan it into the alarm machine once the door is opened, or then the security alarm starts alarming. In fact, the full-time employees will get a clause in their work contract which says that, none has the right to use the working keys other than the work purposes.</li>
+    <li>Customers keys: Customer’s keys are placed on the lockers, as a security process, only the full-time employees who get the code to open the lockers. Full-time employees have also to sign in their contract a clause to keep the code just for the use for the work purposes in the working times. Also, the lockers have to be placed in a hidden place through a specific office in which they got the key for it.</li>
+    <li>Cars keys: Since full-time employees who are working all the time and the part-time are anytime accompanied. The company has to get at least 3 cars in the use. The 4 full-time employees have to get a driving license in their own. So, they are the one who we can rely on. The workers have to get enough competence to drive under any circumstances (all seasons). The company also can pay and offer extra training hours for them in the driving school if needed, in order to drive safely to protect the workers and the company’s cars.</li>
+    </ul>
     </div>
 </div>
 
