Implemented the chapter "cameras-through-the-company.html"

--- a/cameras-through-the-company.html
+++ b/cameras-through-the-company.html
@@ -122,7 +122,7 @@ body {
 <div class="row">
   <div class="main">
     <h2>CAMERAS THROUGH THE COMPANY</h2>
-	
+	Getting cameras through the company is another way to improve the security in the company. A camera in the entrance gate is important in addition to keeping visitor’s information from the ID in the reception. Another needed camera might be the one in the office where there are the lockers and the customer’s keys. This is a process which can help us to know employees who get the keys in case, some key is lost.
     </div>
 </div>
 
