--- a/fixing-cars.html
+++ b/fixing-cars.html
@@ -122,7 +122,7 @@ body {
 <div class="row">
   <div class="main">
     <h2>FIXING COMPANIES CARS</h2>
-	
+	As a security process, it is important for the company to make a contract with a fixing cars company. This is a process which guarantee the continuity of the work. Since the company owns cars, and employees use the cars daily to move to the customers. The contract has to get a clause of fixing the cars within 1-2 days depending on the gravity and parts which has to be changed in the car. The contract can be also saved in the locker where all important papers are.
     </div>
 </div>
 
