Implemented the chapter "paper-shredder.html"

--- a/paper-shredder.html
+++ b/paper-shredder.html
@@ -122,7 +122,7 @@ body {
 <div class="row">
   <div class="main">
     <h2>PAPER SHREDDER</h2>
-	
+	This is a machine with a high-level of security. This machine can cut papers into too small tiny pieces. The purposes of having this machine is to cut any important printed document in case it is not needed anymore. It can cut the papers in order that none can collect it and get the information. The machine is not costing so much since the price is about 100 euros or less.
     </div>
 </div>
 
