Implementation of the SG for work insurance

--- a/work-insurance.html
+++ b/work-insurance.html
@@ -122,7 +122,7 @@ body {
 <div class="row">
   <div class="main">
     <h2>WORK INSURANCE</h2>
-	
+	The company has the obligation to pay the insurance for the workers. In case something happens, both the company and the workers get their full rights. The company does not have to pay the worker and the worker gets paid from the insurance company until recovering. For the safety purposes, the worker must inform the company once something happens and go directly to the hospital. The worker depending on the gravity of the injury, has to get rest until recovering before starting work again.
     </div>
 </div>
 
