Implementation of worker movement

--- a/worker-movement.html
+++ b/worker-movement.html
@@ -122,7 +122,8 @@ body {
 <div class="row">
   <div class="main">
     <h2>WORKER PHYISCAL MOVEMENT</h2>
-	
+	For the safety of the employee’s health and specifically the back, in case the worker wants to hold a heavy cleaning tool or a working tool from the floor, he/she has to hold it by the support of the legs, not with the support of the back which can hurt the worker’s back after few working days.
+
     </div>
 </div>
 
