Fixed the selected chapter Bug

--- a/cameras-through-the-company.html
+++ b/cameras-through-the-company.html
@@ -103,9 +103,9 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
-  <a href="./cameras-through-the-company.html">Cameras through the company</a>
+  <a href="./cameras-through-the-company.html" class="active">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
   <a href="./internet-access.html">Internet access</a>
   <a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a>
