--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
   <a href="./cameras-through-the-company.html">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
@@ -117,7 +117,7 @@ body {
   <a href="./good-car-in-use.html">Good car in use</a>
   <a href="./worker-movement.html">Worker physical movement</a>
   <a href="./fixing-cars.html">Fixing companies cars</a>
-  <a href="./contact.html" class="right">Contact</a>
+  <a href="./contact.html" class="right active">Contact</a>
 </div>
 
 <div class="row">
@@ -127,6 +127,7 @@ body {
 	<p><strong>E-Mail - Remet Santos: </strong><mark>remet.santos@student.lamk.fi</mark></p>
 	<p><strong>E-Mail - Mohammed Aitoukazzamane: </strong><mark>mohammed.aitoukazzamane@student.lamk.fi</mark></p>
 	<p><strong>E-Mail - Elias Anderlohr: </strong><mark>elias.christian.anderlohr@student.lamk.fi</mark></p>
+	<p><strong>E-Mail - Kien Nguyen: </strong><mark>kien.nguyen@student.lamk.fi</mark></p>
 	
 	<br>
 	<p><strong>Address: </strong><mark>Helsinki, Finland</mark></p>
