--- a/paper-shredder.html
+++ b/paper-shredder.html
@@ -103,7 +103,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
   <a href="./cameras-through-the-company.html">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
@@ -112,7 +112,7 @@ body {
   <a href="./sg-for-clothes-and-shoes.html">Security guide for clothes and shoes</a>
   <a href="./work-insurance.html">Work insurance</a>
   <a href="./handling-data.html">Handling the customer’s, employee’s and company’s data</a>
-  <a href="./paper-shredder.html">Paper shredder</a>
+  <a href="./paper-shredder.html" class="active">Paper shredder</a>
   <a href="./good-car-in-use.html">Good car in use</a>
   <a href="./worker-movement.html">Worker physical movement</a>
   <a href="./fixing-cars.html">Fixing companies cars</a>
