--- a/fixing-cars.html
+++ b/fixing-cars.html
@@ -103,7 +103,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
   <a href="./cameras-through-the-company.html">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
@@ -115,7 +115,7 @@ body {
   <a href="./paper-shredder.html">Paper shredder</a>
   <a href="./good-car-in-use.html">Good car in use</a>
   <a href="./worker-movement.html">Worker physical movement</a>
-  <a href="./fixing-cars.html">Fixing companies cars</a>
+  <a href="./fixing-cars.html" class="active">Fixing companies cars</a>
   <a href="./contact.html" class="right">Contact</a>
 </div>
 
