--- a/internet-access.html
+++ b/internet-access.html
@@ -103,11 +103,11 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="./index.html" class="active">Home</a>
+  <a href="./index.html">Home</a>
   <a href="./visitors-through-the-company.html">Visitors through the company</a>
   <a href="./cameras-through-the-company.html">Cameras through the company</a>
   <a href="./handling-the-keys.html">Handling the keys</a>
-  <a href="./internet-access.html">Internet access</a>
+  <a href="./internet-access.html" class="active">Internet access</a>
   <a href="./handling-the-cleaning-tools.html">Handling the cleaning tools</a>
   <a href="./sg-for-clothes-and-shoes.html">Security guide for clothes and shoes</a>
   <a href="./work-insurance.html">Work insurance</a>
