--- a/handling-data.html
+++ b/handling-data.html
@@ -122,7 +122,7 @@ body {
 <div class="row">
   <div class="main">
     <h2>HANDLING THE CUSTOMER'S, EMPLOYEE'S AND COMPANY'S DATA</h2>
-	From the security prospective, it is not safe to save sensitive data such as, workers and customers contracts, company’s personal data and so on… in public clouds. For this reason, the company has to get its own servers in the use only for the user related job (admins, coder…), save the sensitive data in the company’s servers and then being secure in there.
+	From the security prospective, it is not safe to save sensitive data such as, workers and customers contracts, company’s personal data and so on… in public clouds. For this reason, the company has to get its own servers in the use only for the user related job (admins, coder…), save the sensitive data in the company’s servers and then being secure in there. The company's server and the sensive data is only accessible from the restricted intranet.
 <br><br>
 Since we are going to get some important papers for sure in the company, such as worker’s contracts, customer’s information (addresses, contracts, agreement…). It is extremely needed to get all this data printed in case we have a damage in the system and/or in the servers. For this reason, we need a second locker in which we are going to put these stuffs on it. This is something what only administrators got the code for it and as the first locker is under a camera surveillance, the second locker is important as well and also under surveillance.
 
