Updated the chapter worker movement and implemented a picture.

--- a/worker-movement.html
+++ b/worker-movement.html
@@ -93,6 +93,12 @@ body {
     width: 100%;
   }
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
 </style>
 </head>
 <body>
@@ -123,7 +129,10 @@ body {
   <div class="main">
     <h2>WORKER PHYISCAL MOVEMENT</h2>
 	For the safety of the employee’s health and specifically the back, in case the worker wants to hold a heavy cleaning tool or a working tool from the floor, he/she has to hold it by the support of the legs, not with the support of the back which can hurt the worker’s back after few working days.
-
+	<br><br>
+	<img src="./images/worker-movement.jpg" style="width:80%; height:80%;" class="center">
+	<p class="center">The picture describes how a worker should pick up heavy tools/objects. (IMAGE WITHOUT COPYRIGHT)</p>
+	<br><br><br>
     </div>
 </div>
 
