--- a/internet-access.html
+++ b/internet-access.html
@@ -125,7 +125,7 @@ body {
     Normally, every worker signs a contract before start working through the company. The company create a username and own a password for its network that any worker can use it, in order to get connected into the network. The security process in this, is that no one from outside the company who does not get a username in the company’s system cannot get connected into the network unless, if the company is creating a specific username for the guest with limited access, which means that the guest cannot get to the personal data.
     <br><br>
 	The company has two different networks. One is a normal network with a normal internet access but this network has no access to customer information. 
-	The second network is a restricted intranet with only company related website available but access to the customer data. 
+	The second network is a restricted intranet with only company related website available but access to the customer data. The restricted Internet should only work with LAN and should never be connected to the WIFI. Therefore the possibility for hacker to hack the network is smaller.
 	</div>
 </div>
 
