--- a/visitors-through-the-company.html
+++ b/visitors-through-the-company.html
@@ -123,7 +123,7 @@ body {
   <div class="main">
     <h2>VISITORS THROUGH THE COMPANYS </h2>
 	When the company gets visitors and/or customers, it is extremely important to get visitors ID for the security issues and save the visitor information in the system. The Visitor needs to exchange his personal ID against the visitor ID of the company.
-	There is all the time some risks to receive customers for the first time, since we cannot really the real purpose of visiting the company. For the reasons mentioned earlier, the company must get visitors ID. When the visitor leaves the company he has to give the ID back to the security personal to get their own personal ID back. 
+	There is all the time some risks to receive customers for the first time, since we cannot really know the real purpose of visiting the company. For the reasons mentioned earlier, the company must get visitors ID. When the visitor leaves the company he has to give the ID back to the security personal to get their own personal ID back. 
     </div>
 </div>
 
